--- a/functions/package.json
+++ b/functions/package.json
@@ -6,14 +6,21 @@
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "deploy:functions": "npm run build && firebase deploy --only functions"
   },
   "engines": {
     "node": "8"
   },
   "dependencies": {
-    "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.1"
+    "@google-cloud/logging-bunyan": "^3.0.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "bunyan": "^1.8.14",
+    "dotenv": "^8.2.0",
+    "firebase-admin": "^9.0.0",
+    "firebase-functions": "^3.8.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
